[workspace]
resolver = "2"
members = [
  "field",
  "common",
  "rotate",
  "ladders",
  "test-images",
  "uct",
  "minimax",
  "patterns",
  "zero",
  "zero-burn",
  "zero-train",
  "initial",
  "iced",
  "svg",
  "sgf",
  "ai",
  "ais",
  "cli"
]

[profile.dev]
opt-level = 0
lto = false
debug = true
panic = "unwind"

[profile.test]
opt-level = 3
lto = false
debug = true

[profile.bench]
opt-level = 3
lto = true
debug = false

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"
codegen-units = 1
