[workspace]
resolver = "2"
members = [
  "field",
  "common",
  "rotate",
  "ladders",
  "test-images",
  "uct",
  "minimax",
  "patterns",
  "zero",
  "zero-burn",
  "zero-train",
  "initial",
  "iced",
  "svg",
  "sgf",
  "ai",
  "ais",
  "protocol",
  "cli",
  "client",
  "term-render",
  "versus"
]

[workspace.dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
rand_distr = "0.4"
either = "1.12"
itertools = "0.13"
num-traits = "0.2"
ndarray = "0.15"
crossbeam = "0.8"
rayon = "1.10"
num_cpus = "1.16"
burn = "0.13"
strum = { version = "0.26", features = [ "derive" ] }
serde = "1.0"
serde_json = "1.0"
serde_with = "3.8"
svg = "0.17"
web-time = "1.1"
sgf-parse = "4.2"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"
criterion = "0.5"
clap = "4.5"
humantime = "2.1"
futures = "0.3"
async-process = "2.2"

[profile.dev]
opt-level = 0
lto = false
debug = true
panic = "unwind"

[profile.test]
opt-level = 3
lto = false
debug = true

[profile.bench]
opt-level = 3
lto = true
debug = false

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"
codegen-units = 1
