[workspace]
resolver = "2"
members = [
  "field",
  "common",
  "rotate",
  "ladders",
  "test-images",
  "uct",
  "minimax",
  "patterns",
  "zero",
  "zero-burn",
  "zero-train",
  "initial",
  "iced",
  "svg",
  "sgf",
  "ai",
  "ais",
  "protocol",
  "cli",
  "client",
  "term-render",
  "versus",
  "server",
  "bench"
]

[workspace.dependencies]
rand = "0.9"
rand_xoshiro = "0.7"
rand_distr = "0.5"
smallvec = "1.15"
either = "1.15"
itertools = "0.14"
num-traits = "0.2"
ndarray = "0.16"
crossbeam = "0.8"
rayon = "1.11"
num_cpus = "1.17"
burn = { version = "0.18", default-features = false, features = [ "std" ] }
strum = { version = "0.27", features = [ "derive" ] }
serde = "1.0"
serde_json = "1.0"
serde_with = "3.14"
svg = "0.18"
web-time = "1.1"
sgf-parse = "4.2"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
anyhow = "1.0"
criterion = "0.7"
clap = "4.5"
humantime = "2.2"
futures = "0.3"
async-process = "2.4"
postcard = "1.1"
derive_more = "2.0"

[profile.dev]
opt-level = 0
lto = false
debug = true
panic = "unwind"

[profile.test]
opt-level = 3
lto = false
debug = true

[profile.bench]
opt-level = 3
lto = true
debug = false

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"
codegen-units = 1
