[package]
name = "oppai-ais"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
either = "1.9"
rand = "0.8"
num-traits = "0.2"
strum = { version = "0.26", features = [ "derive" ] }
num_cpus = "1.16"
clap = "4.4"
humantime = "2.1"
web-time = "0.2"
oppai-field = { path = "../field" }
oppai-ai = { path = "../ai" }
oppai-minimax = { path = "../minimax" }
oppai-uct = { path = "../uct" }
oppai-zero = { path = "../zero" }
oppai-ladders = { path = "../ladders" }
oppai-patterns = { path = "../patterns" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam = "0.8"

[features]
default = ["dsu"]
dsu = ["oppai-field/dsu"]
