[package]
name = "oppai-ais"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
either.workspace = true
rand.workspace = true
num-traits.workspace = true
strum.workspace = true
num_cpus.workspace = true
clap.workspace = true
humantime.workspace = true
web-time.workspace = true
oppai-field = { path = "../field" }
oppai-ai = { path = "../ai" }
oppai-minimax = { path = "../minimax" }
oppai-uct = { path = "../uct" }
oppai-zero = { path = "../zero" }
oppai-ladders = { path = "../ladders" }
oppai-patterns = { path = "../patterns" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam.workspace = true

[features]
default = ["dsu"]
dsu = ["oppai-field/dsu"]
