[package]
name = "oppai-bench"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
rand = { workspace = true, features = [ "small_rng" ] }
clap = { workspace = true, features = [ "cargo" ] }
oppai-field = { path = "../field" }

[features]
default = ["dsu"]
dsu = ["oppai-field/dsu"]
