[package]
name = "oppai-bot"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
log = "0.4"
rand = "0.8"
strum = { version = "0.24", features = [ "derive" ] }
clap = { version = "3.1", optional = true }
num_cpus = { version = "1.13", optional = true }
humantime = { version = "2.1", optional = true }
crossbeam = "0.8"
oppai-field = { path = "../field" }
oppai-minimax = { path = "../minimax" }
oppai-uct = { path = "../uct" }
oppai-patterns = { path = "../patterns" }
oppai-ladders = { path = "../ladders" }

[features]
default = ["dsu"]
cli = [ "clap", "num_cpus", "humantime" ]
dsu = ["oppai-field/dsu"]
