[package]
name = "oppai-bot"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
log = "0.4"
rand = "0.8"
strum = { version = "0.25", features = [ "derive" ] }
num_cpus = "1.16"
clap = "4.4"
humantime = "2.1"
burn = { version = "0.10", features = [ "wgpu" ], optional = true }
oppai-field = { path = "../field" }
oppai-minimax = { path = "../minimax" }
oppai-uct = { path = "../uct" }
oppai-patterns = { path = "../patterns" }
oppai-ladders = { path = "../ladders" }
oppai-zero = { path = "../zero", optional = true }
oppai-zero-burn = { path = "../zero-burn", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam = "0.8"

[features]
default = ["dsu", "zero"]
dsu = ["oppai-field/dsu"]
zero = [ "oppai-zero", "oppai-zero-burn", "burn" ]
