[package]
name = "oppai-cli"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = [ "small_rng" ] }
time = "0.3"
env_logger = "0.11"
crossbeam = "0.8"
clap = { version = "4.4", features = [ "cargo" ] }
humantime = "2.1"
strum = "0.26"
oppai-common = { path = "../common" }
oppai-field = { path = "../field" }
oppai-ladders = { path = "../ladders" }
oppai-patterns = { path = "../patterns" }
oppai-uct = { path = "../uct" }
oppai-minimax = { path = "../minimax" }
oppai-ai = { path = "../ai" }
oppai-ais = { path = "../ais" }

[features]
default = ["dsu"]
dsu = ["oppai-ais/dsu"]

[[bin]]
name = "main"
path = "src/main.rs"
