[package]
name = "oppai-cli"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
rand = { workspace = true, features = [ "small_rng" ] }
env_logger.workspace = true
crossbeam.workspace = true
clap = { workspace = true, features = [ "cargo" ] }
humantime.workspace = true
serde_json.workspace = true
anyhow.workspace = true
postcard = { workspace = true, features = [ "use-std" ] }
oppai-common = { path = "../common" }
oppai-field = { path = "../field" }
oppai-ladders = { path = "../ladders" }
oppai-patterns = { path = "../patterns" }
oppai-uct = { path = "../uct" }
oppai-minimax = { path = "../minimax" }
oppai-ai = { path = "../ai" }
oppai-ais = { path = "../ais" }
oppai-protocol = { path = "../protocol" }

[features]
default = ["dsu"]
dsu = ["oppai-ais/dsu"]

[[bin]]
name = "main"
path = "src/main.rs"
