[package]
name = "oppai-cli"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
futures.workspace = true
rand.workspace = true
env_logger.workspace = true
crossbeam.workspace = true
clap = { workspace = true, features = [ "cargo" ] }
humantime.workspace = true
serde_json.workspace = true
anyhow.workspace = true
either.workspace = true
strum.workspace = true
num-traits.workspace = true
postcard = { workspace = true, features = [ "use-std" ] }
burn = { workspace = true }
oppai-common = { path = "../common" }
oppai-zero = { path = "../zero" }
oppai-zero-burn = { path = "../zero-burn", default-features = false }
oppai-field = { path = "../field" }
oppai-ladders = { path = "../ladders" }
oppai-patterns = { path = "../patterns" }
oppai-uct = { path = "../uct" }
oppai-minimax = { path = "../minimax" }
oppai-ai = { path = "../ai" }
oppai-ais = { path = "../ais" }
oppai-protocol = { path = "../protocol" }

[features]
default = ["dsu", "ndarray", "vulkan"]
dsu = ["oppai-ais/dsu"]
cuda = ["oppai-zero-burn/cuda", "burn/cuda"]
rocm = ["oppai-zero-burn/rocm", "burn/rocm"]
flex = ["oppai-zero-burn/flex", "burn/flex"]
ndarray = ["oppai-zero-burn/ndarray", "burn/ndarray"]
vulkan = ["oppai-zero-burn/vulkan", "burn/vulkan"]
webgpu = ["oppai-zero-burn/webgpu", "burn/webgpu"]

[[bin]]
name = "oppai-cli"
path = "src/main.rs"
