[package]
name = "oppai-common"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2018"

[dependencies]
oppai-field = { path = "../field" }

[dev-dependencies]
rand = { version = "0.7", features = [ "small_rng" ] }
