[package]
name = "oppai-common"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
oppai-field = { path = "../field" }
smallvec.workspace = true

[dev-dependencies]
rand.workspace = true
rand_xoshiro.workspace = true
