[package]
name = "oppai-egui"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
eframe = "0.23"
rand = { version = "0.8", features = ["small_rng"] }
oppai-initial = { path = "../initial" }
oppai-bot = { path = "../bot", default-features = false }
