[package]
name = "oppai-field"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2018"

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = "0.3"
rand_xoshiro = "0.6"

[features]
dsu = []

[[bench]]
name = "field_benchmark"
path = "src/field_benchmark.rs"
harness = false
