[package]
name = "oppai-field"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
rand.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
criterion.workspace = true
rand_xoshiro.workspace = true

[features]
dsu = []
serde = [ "dep:serde" ]

[[bench]]
name = "field_benchmark"
path = "src/field_benchmark.rs"
harness = false
