[package]
name = "oppai-iced"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"
default-run = "main"

[dependencies]
iced = { version = "0.9", features = ["canvas", "image"] }
rand = { version = "0.8", features = ["small_rng"] }
log = "0.4"
strum = { version = "0.26", features = ["derive"] }
clap = { version = "4.4", features = ["cargo"] }
humantime = "2.1"
rfd = { version = "0.13", default-features = false, features = ["async-std", "xdg-portal"] }
sgf-parse = "4.2"
oppai-field = { path = "../field" }
oppai-initial = { path = "../initial" }
oppai-patterns = { path = "../patterns" }
oppai-ai = { path = "../ai" }
oppai-ais = { path = "../ais", default-features = false }
oppai-sgf = { path = "../sgf", features = ["zero"] }
oppai-zero = { path = "../zero" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Worker",
  "MessageEvent",
  "Url",
  "Location",
  "Blob",
  "BlobPropertyBag",
  "DedicatedWorkerGlobalScope"
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
oppai-field = { path = "../field", features = ["serde"] }
# for js feature
getrandom = { version = "0.2", features = ["js"] }
# for changing canvas size hack
iced_native = "0.10"

[features]
default = ["dsu"]
dsu = ["oppai-field/dsu", "oppai-ais/dsu"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"
