[package]
name = "oppai-iced"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"
default-run = "oppai-iced"

[dependencies]
iced = { version = "0.14", features = ["canvas", "image"] }
rand = { workspace = true, features = ["small_rng"] }
log.workspace = true
strum.workspace = true
clap = { workspace = true, features = ["cargo"] }
humantime.workspace = true
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
sgf-parse.workspace = true
postcard = { workspace = true, features = [ "use-std" ] }
oppai-field = { path = "../field" }
oppai-initial = { path = "../initial" }
oppai-patterns = { path = "../patterns" }
oppai-ai = { path = "../ai" }
oppai-ais = { path = "../ais", default-features = false }
oppai-sgf = { path = "../sgf", features = ["zero"] }
oppai-zero = { path = "../zero" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Worker",
  "MessageEvent",
  "Url",
  "Location",
  "Blob",
  "BlobPropertyBag",
  "DedicatedWorkerGlobalScope"
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
oppai-field = { path = "../field", features = ["serde"] }
# for wasm_js feature
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["dsu"]
dsu = ["oppai-field/dsu", "oppai-ais/dsu"]

[[bin]]
name = "oppai-iced"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"
