[package]
name = "oppai-initial"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
strum = { version = "0.26", features = [ "derive" ] }
oppai-field = { path = "../field" }
