[package]
name = "oppai-ladders"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2018"

[dependencies]
log = "0.4"
oppai-field = { path = "../field" }
oppai-common = { path = "../common" }

[dev-dependencies]
rand = "0.7"
rand_xorshift = "0.2"
