[package]
name = "oppai-ladders"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
log.workspace = true
oppai-field = { path = "../field" }
oppai-common = { path = "../common" }

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true

[[bench]]
name = "ladders_benchmark"
path = "src/ladders_benchmark.rs"
harness = false
