[package]
name = "oppai-minimax"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2018"

[dependencies]
log = "0.4"
crossbeam = "0.8"
strum = { version = "0.20", features = [ "derive" ] }
oppai-field = { path = "../field" }
oppai-common = { path = "../common" }

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.7", features = [ "small_rng" ] }
env_logger = "0.8"
oppai-test-images = { path = "../test-images" }

[[bench]]
name = "minimax_benchmark"
path = "src/minimax_benchmark.rs"
harness = false
