[package]
name = "oppai-minimax"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
log = "0.4"
crossbeam = "0.8"
num_cpus = "1.13"
strum = { version = "0.24", features = [ "derive" ] }
oppai-field = { path = "../field" }
oppai-common = { path = "../common" }

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
rand_xoshiro = "0.6"
env_logger = "0.9"
oppai-test-images = { path = "../test-images" }

[[bench]]
name = "minimax_benchmark"
path = "src/minimax_benchmark.rs"
harness = false
