[package]
name = "oppai-common"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2018"

[dependencies]
oppai-field = { path = "../oppai-field" }

[dev-dependencies]
rand = "0.7"
rand_xorshift = "0.2"
