[package]
name = "oppai-iced"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2018"

[dependencies]
iced = { version = "0.2", features = [ "canvas" ] }
rand = "0.7"
rand_xorshift = "0.2"
oppai-field = { path = "../oppai-field" }
