[package]
name = "oppai-minimax"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2018"

[dependencies]
rand = "0.7"
log = "0.4"
crossbeam = "0.7"
oppai-field = { path = "../oppai-field" }
oppai-common = { path = "../oppai-common" }

[dev-dependencies]
criterion = "0.3"
rand_xorshift = "0.2"
env_logger = "0.6"
oppai-test-images = { path = "../oppai-test-images" }

[[bench]]
name = "minimax_benchmark"
path = "src/minimax_benchmark.rs"
harness = false
