[package]
name = "oppai-zero"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2018"

[dependencies]
rand = "0.7"
ndarray = "0.13"
decorum = "0.1"
oppai-field = { path = "../oppai-field" }

[dev-dependencies]
rand_xorshift = "0.2"
