[package]
name = "oppai-patterns"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
log = "0.4"
rayon = "1.5"
oppai-field = { path = "../field" }

[dev-dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
