[package]
name = "oppai-patterns"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
log.workspace = true
rayon.workspace = true
serde.workspace = true
oppai-field = { path = "../field" }
oppai-rotate = { path = "../rotate" }

[dev-dependencies]
rand.workspace = true
rand_xoshiro.workspace = true
