[package]
name = "oppai-protocol"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
oppai-field = { path = "../field", features = ["serde"] }

[dev-dependencies]
serde_json.workspace = true
