[package]
name = "oppai-server"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
rand.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
derive_more = "0.99"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
papaya = "0.1"
im = "15.1"
uuid = { version = "1.10", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls", "rustls-tls-native-roots", "charset" ] }
openidconnect = "4.0.0-alpha.2"
cookie = "0.18"
oppai-field = { path = "../field", features = ["serde"] }

[[bin]]
name = "main"
path = "src/main.rs"
