[package]
name = "oppai-server"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
rand.workspace = true
itertools.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
clap = { workspace = true, features = ["env", "cargo"] }
derive_more = { workspace = true, features = ["from", "into", "display"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = "0.26"
papaya = "0.2"
imbl = "5.0"
uuid = { version = "1.15", features = ["serde"] }
time = "0.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "time" ] }
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls", "rustls-tls-native-roots", "charset" ] }
openidconnect = "4.0"
cookie = { version = "0.18", features = [ "private" ] }
hex = "0.4"
oppai-field = { path = "../field", features = ["serde"] }

[features]
test = [ "uuid/v5" ]

[[bin]]
name = "kropki"
path = "src/main.rs"
