[package]
name = "oppai-sgf"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
sgf-parse = "4.2"
rand = "0.8"
log = "0.4"
oppai-field = { path = "../field" }

[dev-dependencies]
rand_xoshiro = "0.6"
env_logger = "0.10"
