[package]
name = "oppai-sgf"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
sgf-parse.workspace = true
rand.workspace = true
log.workspace = true
oppai-field = { path = "../field" }
oppai-zero = { path = "../zero", optional = true }

[dev-dependencies]
rand_xoshiro.workspace = true
env_logger.workspace = true

[features]
zero = [ "oppai-zero" ]
