[package]
name = "oppai-term-render"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
anyhow.workspace = true
resvg = { version = "0.42" }
image = { version = "0.24" }
viuer = { version = "0.7", features = [ "sixel" ] }
oppai-field = { path = "../field" }
oppai-svg = { path = "../svg" }
