[package]
name = "oppai-uct"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2018"

[dependencies]
rand = "0.8"
log = "0.4"
crossbeam = "0.8"
strum = { version = "0.20", features = [ "derive" ] }
oppai-field = { path = "../field" }
oppai-common = { path = "../common" }

[dev-dependencies]
criterion = "0.3"
rand_xoshiro = "0.6"
env_logger = "0.8"
oppai-test-images = { path = "../test-images" }

[[bench]]
name = "uct_benchmark"
path = "src/uct_benchmark.rs"
harness = false
