[package]
name = "oppai-uct"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
rand.workspace = true
log.workspace = true
strum.workspace = true
oppai-field = { path = "../field" }
oppai-common = { path = "../common" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam.workspace = true
num_cpus.workspace = true

[dev-dependencies]
criterion.workspace = true
rand_xoshiro.workspace = true
env_logger.workspace = true
oppai-test-images = { path = "../test-images" }

[[bench]]
name = "uct_benchmark"
path = "src/uct_benchmark.rs"
harness = false
