[package]
name = "oppai-verify"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
rand = { workspace = true, features = [ "small_rng" ] }
env_logger.workspace = true
clap = { workspace = true, features = [ "cargo" ] }
anyhow.workspace = true
oppai-field = { path = "../field" }
oppai-sgf = { path = "../sgf" }

[features]
default = ["dsu"]
dsu = ["oppai-field/dsu"]

[[bin]]
name = "oppai-verify"
path = "src/main.rs"
