[package]
name = "oppai-versus"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = [ "small_rng" ] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = [ "cargo" ] }
oppai-initial = { path = "../initial" }
oppai-bot-1 = { package = "oppai-bot", path = "../bot" }
oppai-bot-2 = { package = "oppai-bot", git = "https://github.com/pointsgame/oppai-rs.git" }

[features]
default = ["dsu"]
dsu = ["oppai-bot-1/dsu", "oppai-bot-2/dsu"]
