[package]
name = "oppai-versus"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
rand = { workspace = true, features = [ "small_rng" ] }
log.workspace = true
env_logger.workspace = true
clap = { workspace = true, features = [ "cargo" ] }
futures = { workspace = true, features = [ "executor" ] }
crossterm = "0.29"
oppai-field = { path = "../field" }
oppai-initial = { path = "../initial" }
oppai-client = { path = "../client" }
oppai-svg = { path = "../svg", optional = true }
oppai-term-render = { path = "../term-render", optional = true }

[features]
default = [ "term-render" ]
term-render = [ "dep:oppai-svg", "dep:oppai-term-render" ]
