[package]
name = "oppai-webworker"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2024"

[dependencies]
futures.workspace = true
either.workspace = true
rand.workspace = true
serde_json.workspace = true
anyhow.workspace = true
burn = { workspace = true, features = [ "webgpu", "flex" ] }
log.workspace = true
web-sys = { version = "0.3", features = [
  "Gpu",
  "MessageEvent",
  "WorkerNavigator",
  "DedicatedWorkerGlobalScope",
  "console"
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
# for wasm_js feature
getrandom = { version = "0.4", features = ["wasm_js"] }
reqwest = { version = "0.13", features = ["json"] }
oppai-field = { path = "../field" }
oppai-patterns = { path = "../patterns" }
oppai-zero = { path = "../zero" }
oppai-zero-burn = { path = "../zero-burn", default-features = false, features = [ "webgpu", "flex" ] }
oppai-ai = { path = "../ai" }
oppai-ais = { path = "../ais" }
oppai-protocol = { path = "../protocol" }

[features]
default = ["dsu"]
dsu = ["oppai-ais/dsu"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
