[package]
name = "oppai-zero-burn"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
ndarray = "0.15"
thiserror = "1.0"
num-traits = "0.2"
burn = { version = "0.10", features = ["train"] }
serde = "1.0"
oppai-zero = { path = "../zero" }

[dev-dependencies]
burn = { version = "0.10", features = ["train", "ndarray", "wgpu"] }
