[package]
name = "oppai-zero-burn"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
ndarray.workspace = true
thiserror = "1.0"
num-traits.workspace = true
burn = { version = "0.12", features = ["train"] }
serde = "1.0"
log.workspace = true
oppai-zero = { path = "../zero" }

[dev-dependencies]
burn = { version = "0.12", features = ["train", "ndarray", "wgpu"] }
