[package]
name = "oppai-zero-burn"
version = "0.1.0"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
description = "Open Points Artificial Intelligence"
edition = "2021"

[dependencies]
ndarray.workspace = true
thiserror.workspace = true
num-traits.workspace = true
burn = { workspace = true, features = ["autodiff", "autotune"] }
serde.workspace = true
log.workspace = true
oppai-zero = { path = "../zero" }

[dev-dependencies]
burn = { workspace = true, features = ["autodiff", "autotune", "ndarray", "wgpu"] }
